--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 <br><br><br><br><br><br><br><br>
 <div class="footer">
     <div class="ft-link">
-    <a href="#">Github</a>
-    <a href="#">Linkedin</a>
-    <a href="#">Instagram</a>
-</div>
+        <a class="insta" href="https://github.com/MuhammedAnsari">Github</a>
+        <a class="insta" href="https://www.linkedin.com/in/a-muhammed-ansari-724028236/">Linkedin</a>
+        <a class="insta" href="https://www.instagram.com/muhammed___ansari/">Instagram</a>
+    </div>
     <p>&copy;2022 Ansari's Instagram</p>
 </div>
     
